@@ -4,11 +4,12 @@ import ar.vicria.subte.dto.RouteDto;
 import ar.vicria.subte.dto.StationDto;
 import ar.vicria.telegram.microservice.localizations.LocalizedTelegramMessage;
 import ar.vicria.telegram.microservice.localizations.LocalizedTelegramMessageFactory;
+import ar.vicria.telegram.microservice.properties.TelegramProperties;
 import ar.vicria.telegram.microservice.services.RestToSubte;
 import ar.vicria.telegram.microservice.services.callbacks.dto.AnswerData;
+import ar.vicria.telegram.microservice.services.kafka.producer.SubteRoadTopicKafkaProducer;
 import ar.vicria.telegram.microservice.services.messages.RoutMessage;
 import ar.vicria.telegram.microservice.services.util.RowUtil;
-import lombok.NonNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -21,13 +22,13 @@ import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
-import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
-import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
+import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.anyObject;
@@ -43,8 +44,13 @@ public class QueryTest {
     @Mock
     public RestTemplate restTemplate;
 
+    private TelegramProperties properties = new TelegramProperties();
+
     @Mock
     public LocalizedTelegramMessageFactory factory;
+
+    @Mock
+    public SubteRoadTopicKafkaProducer kafkaProducer;
 
     private Query answerDetailsQuery;
     private BranchQuery branchQuery;
@@ -68,18 +74,19 @@ public class QueryTest {
         routeDto.setRoute(Arrays.asList(new StationDto("", "Станция"), new StationDto("", "станция2")));
         ResponseEntity<RouteDto> responseEntity2 = new ResponseEntity<>(routeDto, HttpStatus.OK);
         when(restTemplate.postForEntity(anyString(), anyObject(), eq(RouteDto.class))).thenReturn(responseEntity2);
-
-        RestToSubte restToSubte = new RestToSubte(restTemplate);
+        properties.setSubteGet("http://localhost:8082/stations/all");
+        properties.setSubtePost("http://localhost:8082/distance/count");
+        RestToSubte restToSubte = new RestToSubte(restTemplate, properties);
         RowUtil rowUtil = new RowUtil();
         RoutMessage routMessage = new RoutMessage(rowUtil);
 
 
-        answerDetailsQuery = new AnswerDetailsQuery(rowUtil, restToSubte);
+        answerDetailsQuery = new AnswerDetailsQuery(rowUtil, kafkaProducer, restToSubte);
         answerDetailsQuery.setLocalizedFactory(factory);
         branchQuery = new BranchQuery(rowUtil, restToSubte, routMessage);
         stationQuery = new StationQuery(rowUtil, restToSubte, branchQuery);
         defaultQuery = new DefaultQuery(rowUtil);
-        answerQuery = new AnswerQuery(rowUtil, stationQuery, restToSubte);
+        answerQuery = new AnswerQuery(rowUtil, kafkaProducer, stationQuery, restToSubte);
         answerQuery.setLocalizedFactory(factory);
     }
 
@@ -119,7 +126,6 @@ public class QueryTest {
     @ParameterizedTest
     @CsvSource({
             "AnswerQuery,<b>Маршрут:</b> от \uD83D\uDD34 Станция до \uD83D\uDD34 Станция Выберите,AnswerDetailsQuery",
-            "AnswerDetailsQuery,<b>Маршрут:</b> от \uD83D\uDD34 Станция до \uD83D\uDD34 Станция Выберите,AnswerQuery",
     })
     public void process(String id, String msg) {
         var testData = new AnswerData(id, 0);
@@ -132,7 +138,28 @@ public class QueryTest {
      * @return all
      */
     List<Query> allQuery() {
-        return new ArrayList<>(List.of(answerDetailsQuery, branchQuery, stationQuery, answerQuery, defaultQuery));
+        RowUtil rowUtil = new RowUtil();
+
+        RestTemplate restTemplate = mock(RestTemplate.class);
+        ResponseEntity<StationDto[]> responseEntity = new ResponseEntity<>(new StationDto[]{}, HttpStatus.OK);
+        when(restTemplate.getForEntity(anyString(), eq(StationDto[].class))).thenReturn(responseEntity);
+
+        RouteDto routeDto = new RouteDto();
+        routeDto.setTotalTime(5);
+        routeDto.setRoute(Arrays.asList(new StationDto("", "Станция"), new StationDto("", "станция2")));
+        ResponseEntity<RouteDto> responseEntity2 = new ResponseEntity<>(routeDto, HttpStatus.OK);
+        when(restTemplate.postForEntity(anyString(), anyObject(), eq(RouteDto.class))).thenReturn(responseEntity2);
+
+        RestToSubte restToSubte = new RestToSubte(restTemplate, properties);
+        RoutMessage routMessage = new RoutMessage(rowUtil);
+
+        Query answerDetailsQuery = new AnswerDetailsQuery(rowUtil, kafkaProducer, restToSubte);
+        BranchQuery branchQuery = new BranchQuery(rowUtil, restToSubte, routMessage);
+        StationQuery stationQuery = new StationQuery(rowUtil, restToSubte, branchQuery);
+        DefaultQuery defaultQuery = new DefaultQuery(rowUtil);
+        Query answerQuery = new AnswerQuery(rowUtil, kafkaProducer, stationQuery, restToSubte);
+
+        return new ArrayList<>(List.of(answerDetailsQuery, answerQuery, branchQuery, stationQuery, defaultQuery));
     }
 
     /**
@@ -161,14 +188,13 @@ public class QueryTest {
      */
     void process(AnswerData data, String msg) {
         List<Query> queries = allQuery();
-        EditMessageText edit = queries.stream()
+        Optional<BotApiMethod> edit = queries.stream()
                 .filter(query -> query.supports(data, msg))
                 .findFirst()
                 .map(query -> query.process(1, "chatId", msg, data))
                 .get(); //have default
 
-        @NonNull List<List<InlineKeyboardButton>> keyboard = edit.getReplyMarkup().getKeyboard();
-        assertEquals(1, keyboard.size());
+        assertEquals(Optional.empty(), edit);
     }
 
 }
